syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "DBSnapshot";

message DBSnapshotDetails {
  uint32 memberId = 1;
  repeated bytes topicSnapshot = 2;
}