syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "ElectionMessage";

message ElectionMessageDetails {
  uint32 messageSenderId = 1;
}