syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "TopicSnapshot";

message TopicSnapshotDetails {
  string topic = 1;
  uint64 offset = 2;
}